--- a/public/index.html
+++ b/public/index.html
@@ -139,20 +139,30 @@
             overflow-y: auto;
             padding: 20px;
             background: #f9fafb;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
 
         .message {
-            margin-bottom: 15px;
             display: flex;
             flex-direction: column;
+            clear: both;
+            margin-bottom: 10px;
         }
 
         .message.inbound {
             align-items: flex-start;
+            float: left;
+            clear: both;
+            width: 100%;
         }
 
         .message.outbound {
             align-items: flex-end;
+            float: right;
+            clear: both;
+            width: 100%;
         }
 
         .message-bubble {
@@ -160,7 +170,9 @@
             padding: 12px 16px;
             border-radius: 18px;
             word-wrap: break-word;
+            word-break: break-word;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            white-space: pre-wrap;
         }
 
         .message.inbound .message-bubble {
