--- a/public/index.html
+++ b/public/index.html
@@ -344,17 +344,102 @@
         @media (max-width: 768px) {
             .container {
                 grid-template-columns: 1fr;
+                height: 100vh;
             }
             
             .sidebar {
                 display: none;
             }
+
+            .sidebar.mobile-active {
+                display: flex;
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                z-index: 1000;
+                background: white;
+            }
+
+            .mobile-menu-btn {
+                display: block;
+                position: fixed;
+                bottom: 20px;
+                right: 20px;
+                width: 56px;
+                height: 56px;
+                border-radius: 50%;
+                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                color: white;
+                border: none;
+                font-size: 24px;
+                cursor: pointer;
+                box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+                z-index: 999;
+            }
+
+            .close-sidebar-btn {
+                display: block;
+                position: absolute;
+                top: 20px;
+                right: 20px;
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                background: rgba(255,255,255,0.2);
+                color: white;
+                border: none;
+                font-size: 20px;
+                cursor: pointer;
+                z-index: 1001;
+            }
+
+            .chat-header h2 {
+                font-size: 16px;
+            }
+
+            .message-bubble {
+                max-width: 85%;
+            }
+
+            .stats {
+                grid-template-columns: repeat(3, 1fr);
+                gap: 10px;
+                padding: 15px;
+            }
+
+            .stat-value {
+                font-size: 20px;
+            }
+
+            .filters {
+                padding: 10px;
+                gap: 5px;
+            }
+
+            .filter-btn, .clear-filters {
+                font-size: 11px;
+                padding: 5px 10px;
+            }
+        }
+
+        .mobile-menu-btn {
+            display: none;
+        }
+
+        .close-sidebar-btn {
+            display: none;
         }
     </style>
 </head>
 <body>
+    <!-- Botón menú móvil -->
+    <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
+
     <div class="container">
-        <div class="sidebar">
+        <div class="sidebar" id="sidebar">
+            <button class="close-sidebar-btn" id="closeSidebarBtn">✕</button>
             <div class="sidebar-header">
                 <h1>💬 WhatsApp Panel</h1>
                 <p>Agente IA con Claude</p>
